--- a/doc/dissertation/content/fct/antidiffusion_bounds_signs.tex
+++ b/doc/dissertation/content/fct/antidiffusion_bounds_signs.tex
@@ -84,10 +84,10 @@ $\solutionvector$ instead of the low-order solution $\solutionvector^L$ gives
 \]
 where
 \[
-  \solutionletter_{\min,j\ne i} \equiv \min\limits_{j\ne i\in\indicescell[\support_i]}
+  \solutionletter_{\min,j\ne i} \equiv \min\limits_{j\ne i\in\indices(\support_i)}
     \solutionletter_j
   \eqc\quad
-  \solutionletter_{\max,j\ne i} \equiv \max\limits_{j\ne i\in\indicescell[\support_i]}
+  \solutionletter_{\max,j\ne i} \equiv \max\limits_{j\ne i\in\indices(\support_i)}
     \solutionletter_j
   \eqp
 \]
