--- a/doc/dissertation/content/results/shallowwater/dam_break_1d/description.tex
+++ b/doc/dissertation/content/results/shallowwater/dam_break_1d/description.tex
@@ -38,7 +38,7 @@ show the solutions for 256 cells.
    \includegraphics[width=\textwidth]
      {\contentdir/results/shallowwater/dam_break_1d/images/Height_FE_32cells.pdf}
    \caption{Comparison of Height Solutions for the 1-D Dam Break Test Problem
-     Using Explicit Euler with 32 cells}
+     Using Explicit Euler Time Discretization with 32 Cells}
    \label{fig:height_FE_32}
 \end{figure}
 %-------------------------------------------------------------------------------
@@ -47,7 +47,7 @@ show the solutions for 256 cells.
    \includegraphics[width=\textwidth]
      {\contentdir/results/shallowwater/dam_break_1d/images/Momentum_FE_32cells.pdf}
    \caption{Comparison of Momentum Solutions for the 1-D Dam Break Test Problem
-     Using Explicit Euler with 32 cells}
+     Using Explicit Euler Time Discretization with 32 Cells}
    \label{fig:momentum_FE_32}
 \end{figure}
 %-------------------------------------------------------------------------------
@@ -56,7 +56,7 @@ show the solutions for 256 cells.
    \includegraphics[width=\textwidth]
      {\contentdir/results/shallowwater/dam_break_1d/images/Height_FE_256cells.pdf}
    \caption{Comparison of Height Solutions for the 1-D Dam Break Test Problem
-     Using Explicit Euler with 256 cells}
+     Using Explicit Euler Time Discretization with 256 Cells}
    \label{fig:height_FE_256}
 \end{figure}
 %-------------------------------------------------------------------------------
@@ -65,7 +65,7 @@ show the solutions for 256 cells.
    \includegraphics[width=\textwidth]
      {\contentdir/results/shallowwater/dam_break_1d/images/Momentum_FE_256cells.pdf}
    \caption{Comparison of Momentum Solutions for the 1-D Dam Break Test Problem
-     Using Explicit Euler with 256 cells}
+     Using Explicit Euler Time Discretization with 256 Cells}
    \label{fig:momentum_FE_256}
 \end{figure}
 %-------------------------------------------------------------------------------
