--- a/doc/dissertation/content/results/transport/glance_in_void/description.tex
+++ b/doc/dissertation/content/results/transport/glance_in_void/description.tex
@@ -6,7 +6,7 @@ not just the front, to diffuse.
 Table \ref{tab:glance_in_void} summarizes the problem parameters.
 
 %-------------------------------------------------------------------------------
-\begin{table}[htb]\caption{Glance in Void Test Problem Summary}
+\begin{table}[htb]\caption{Glance-in-Void Test Problem Summary}
 \label{tab:glance_in_void}
 \centering
 \begin{tabular}{l l}\toprule
@@ -88,8 +88,8 @@ This test problem was run on a 64-cell$\times$64-cell mesh.
         {\contentdir/results/transport/glance_in_void/images/EVFCT_FE_cE1.png}
       \caption{EV-FCT, $\entropyresidualcoef=1.0$}
    \end{subfigure}
-   \caption{Comparison of Solutions for Glance-in-Void Test
-     Problem Using Explicit Euler Time Discretization with $64\times64$ cells}
+   \caption{Comparison of Solutions for the Glance-in-Void Test
+     Problem Using Explicit Euler Time Discretization with 4096 Cells}
    \label{fig:glance_in_void_fe}
 \end{figure}
 %-------------------------------------------------------------------------------
@@ -125,8 +125,8 @@ This test problem was run on a 64-cell$\times$64-cell mesh.
         {\contentdir/results/transport/glance_in_void/images/EVFCT_FE_cE1.png}
       \caption{EV-FCT, $\entropyresidualcoef=1.0$}
    \end{subfigure}
-   \caption{Comparison of EV and EV-FCT Solutions for Glance-in-Void Test
-     Problem Using Explicit Euler Time Discretization with $64\times64$ cells
+   \caption{Comparison of EV and EV-FCT Solutions for the Glance-in-Void Test
+     Problem Using Explicit Euler Time Discretization with 4096 Cells
      and Various $\entropyresidualcoef$ Values}
    \label{fig:glance_in_void_fe_cE}
 \end{figure}
@@ -153,8 +153,8 @@ This test problem was run on a 64-cell$\times$64-cell mesh.
         {\contentdir/results/transport/glance_in_void/images/GalFCT_SSP3.png}
       \caption{Galerkin-FCT, SSPRK33}
    \end{subfigure}
-   \caption{Comparison of Solutions for Glance-in-Void Test
-     Problem Using Explicit Euler vs. SSPRK33 with $64\times64$ cells}
+   \caption{Comparison of Solutions for the Glance-in-Void Test
+     Problem Using Explicit Euler vs. SSPRK33 with 4096 Cells}
    \label{fig:glance_in_void_fe_vs_ssprk}
 \end{figure}
 %-------------------------------------------------------------------------------
