--- a/doc/dissertation/content/results/transport/mms_sinx_ss/description.tex
+++ b/doc/dissertation/content/results/transport/mms_sinx_ss/description.tex
@@ -103,7 +103,7 @@ bounds is critical to the success of the FCT algorithm.
    \centering
       \includegraphics[width=\textwidth]
         {\contentdir/results/transport/mms_sinx_ss/images/solution_analytic_vs_dmp.pdf}
-      \caption{Comparison of FCT Solutions for Different Solution Bounds with 32 Cells}
+      \caption{Comparison of FCT Solutions with Different Solution Bounds with 32 Cells}
    \label{fig:mms_sinx_ss_solution_vs}
 \end{figure}
 %-------------------------------------------------------------------------------
@@ -112,7 +112,7 @@ bounds is critical to the success of the FCT algorithm.
    \centering
       \includegraphics[width=\textwidth]
         {\contentdir/results/transport/mms_sinx_ss/images/convergence_analytic_vs_dmp.pdf}
-      \caption{Comparison of Error of FCT Solutions for Different Solution Bounds}
+      \caption{Comparison of Error of FCT Solutions with Different Solution Bounds}
    \label{fig:mms_sinx_ss_convergence_vs}
 \end{figure}
 %-------------------------------------------------------------------------------
