--- a/doc/dissertation/content/results/transport/skew_void_to_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/skew_void_to_absorber/description.tex
@@ -126,7 +126,7 @@ the boundaries of the absorber region.
         {\contentdir/results/transport/skew_void_to_absorber/images/EVFCT_FE.png}
       \caption{Entropy Viscosity FCT}
    \end{subfigure}
-   \caption{Comparison of Solutions for Skew Void-to-Absorber Test Problem
+   \caption{Comparison of Solutions for the Skew Void-to-Absorber Test Problem
      Using Explicit Euler Time Discretization with 16384 Cells}
    \label{fig:skew_void_to_absorber_2D_fe}
 \end{figure}
@@ -164,7 +164,7 @@ the boundaries of the absorber region.
         {\contentdir/results/transport/skew_void_to_absorber/images/EVFCT_SSPRK33.png}
       \caption{Entropy Viscosity FCT}
    \end{subfigure}
-   \caption{Comparison of Solutions for Skew Void-to-Absorber Test Problem
+   \caption{Comparison of Solutions for the Skew Void-to-Absorber Test Problem
      Using SSPRK33 Time Discretization with 16384 Cells}
    \label{fig:skew_void_to_absorber_2D_ssprk33}
 \end{figure}
@@ -182,7 +182,7 @@ the boundaries of the absorber region.
         {\contentdir/results/transport/skew_void_to_absorber/images/entropy_viscosity_SSP3_linearscale.png}
       \caption{Entropy viscosity}
    \end{subfigure}
-   \caption{Viscosity Profiles for the Skew Void-to-Absorber Test Problem
+   \caption{Viscosity Profiles for the the Skew Void-to-Absorber Test Problem
      Using SSPRK33 Time Discretization}
    \label{fig:skew_void_to_absorber_visc}
 \end{figure}
