--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -36,7 +36,7 @@
 \input{\contentdir/theorems_dissertation}
 
 % create black bar where there are "Overfull"s
-\overfullrule=15cm
+%\overfullrule=15cm
 \setlength{\emergencystretch}{0.5em}
 
 %===============================================================================
